--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "sql.js": "^1.6.0",
     "lodash": "4.17.20",
-    "moment": "2.29.1"
+    "moment": "2.29.1",
+    "sql.js": "^1.6.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.3.0",
+    "prettier": "3.8.1"
   }
 }
