--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -11,35 +12,33 @@ permissions:
 
 jobs:
   build:
-    docker-build-and-test:
-      runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-      steps:
-        - name: Checkout repo
-          uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-          name: Build Docker Image
-                run: docker build -t todo-api .
+      - name: Build Docker image
+        run: docker build -t todo-api .
 
-                
-          name: Run Security Audit
-                run: docker run --rm todo-api npm audit
+      - name: Run ESLint
+        run: docker run --rm todo-api npm run lint
 
-                
-          name: Run Linting
-                run: docker run --rm todo-api npm run lint
+      - name: Check Prettier formatting
+        run: docker run --rm todo-api npm run format:check
 
-        - name: Login to GHCR
-          uses: docker/login-action@v3
-          with:
-            registry: ghcr.io
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Security Audit
+        run: docker run --rm todo-api npm audit
 
-        - name: Build Docker image
-          run: |
-            docker build -t ghcr.io/${{ github.repository }}:latest .
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-        - name: Push Docker image
-          run: |
-            docker push ghcr.io/${{ github.repository }}:latest
+      - name: Tag Docker image
+        run: docker tag todo-api ghcr.io/${{ github.repository }}:latest
+
+      - name: Push Docker image
+        run: docker push ghcr.io/${{ github.repository }}:latest
