fix: fix package json to add lint and prettier scripts

--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "a todo api",
   "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
+ "scripts": {
+  "start": "node app.js",
+  "lint": "eslint .",
+  "lint:fix": "eslint . --fix",
+  "format": "prettier . --write",
+  "format:check": "prettier . --check"
+},
   "dependencies": {
     "express": "^4.17.1",
     "lodash": "4.17.20",
