--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.3.0",
-    "prettier": "3.8.1"
+    "jest": "^30.2.0",
+    "prettier": "3.8.1",
+    "supertest": "^7.2.2"
   }
 }
