--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,5 @@ sonar.exclusions=node_modules/**,tests/**,**/*.test.js
 sonar.tests=tests
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+sonar.javascript.lcov.reportPaths-=coverage/lcov.info
