--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: docker run --rm todo-api npm audit
 
       - name: Run tests
-        run: docker run --rm -v ${{ github.workspace }}/coverage:/app/coverage todo-api npm run test
+        run: docker run --rm -v ${{ github.workspace }}:/app todo-api npm run test
 
       - name: Upload coverage report
         if: always()
