--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,18 +32,6 @@ jobs:
       - name: Run tests
         run: docker run --rm -v ${{ github.workspace }}/coverage:/app/coverage todo-api npm run test
 
-      - name: Verify coverage file
-        run: |
-          echo "Listing coverage folder:"
-          ls -la coverage || echo "coverage folder missing"
-          if [ -f coverage/lcov.info ]; then
-            echo "lcov.info exists ✅"
-            head -n 5 coverage/lcov.info
-          else
-            echo "lcov.info NOT found ❌"
-            exit 1
-          fi
-
       - name: Upload coverage report
         if: always()
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
@@ -56,6 +44,9 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@fd88b7d7ccbaefd23d8f36f73b59db7a3d246602 # v6
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
