--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,7 @@
 sonar.projectKey=paspigui_todo-api-node
 sonar.organization=paspigui
-sonar.host.url=https://sonarcloud.io
-
-# Node.js settings
 sonar.sources=.
-sonar.exclusions=node_modules/**,tests/**,**/*.test.js
 sonar.tests=tests
-sonar.test.inclusions=**/*.test.js
+sonar.test.inclusions=**/*.test.js,**/*.spec.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.coverage.exclusions=**/*.test.js,**/*.spec.js
