--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,6 @@ jobs:
     strategy:
       matrix:
         node-version: [18, 20]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -80,11 +79,35 @@ jobs:
           path: coverage/
           retention-days: 2
 
+  sonar:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Download coverage artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage-report-${{ github.run_number }}-20
+          path: coverage/
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v6
+        timeout-minutes: 15
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.projectKey=todo-api-node
+            -Dsonar.organization=your-org-key
 
       - name: Smoke test API
         run: |
