--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,10 +97,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Smoke test API
+      - name: Smoke test API (prod)
         run: |
-          echo "Running smoke test..."
-          STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:3000/health || echo "000")
+          echo "Running smoke test against Vercel..."
+          STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" https://todo-api-node-phi.vercel.app/health || echo "000")
           if [ "$STATUS_CODE" != "200" ]; then
             echo "Smoke test failed! Status code: $STATUS_CODE"
             exit 1
