--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,116 +6,8 @@ on:
   pull_request:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci --ignore-scripts
-
-      - name: Build Docker image
-        run: docker build -t todo-api .
-
-      - name: Run ESLint
-        run: docker run --rm todo-api npm run lint
-
-      - name: Check Prettier formatting
-        run: docker run --rm todo-api npm run format:check
-
-      - name: Run Security Audit
-        run: docker run --rm todo-api npm audit
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Tag Docker image
-        run: docker tag todo-api ghcr.io/${{ github.repository }}:latest
-
-      - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository }}:latest
-
-  test:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    strategy:
-      matrix:
-        node-version: [18, 20]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci --ignore-scripts
-
-      - name: Run tests & generate coverage
-        run: npm test
-
-      - name: Upload coverage report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report-${{ github.run_number }}-${{ matrix.node-version }}
-          path: coverage/
-          retention-days: 2
-
-  sonar:
-    runs-on: ubuntu-latest
-    needs: test
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@fd88b7d7ccbaefd23d8f36f73b59db7a3d246602 # v6
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      - name: Smoke test API (prod)
-        run: |
-          echo "Running smoke test against Vercel..."
-          STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" https://todo-api-node-phi.vercel.app/health || echo "000")
-          if [ "$STATUS_CODE" != "200" ]; then
-            echo "Smoke test failed! Status code: $STATUS_CODE"
-            exit 1
-          fi
-          echo "Smoke test passed! Status code: $STATUS_CODE"
-
-      - name: Discord Notification
-        if: always()
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        run: |
-          curl -H "Content-Type: application/json" \
-              -X POST \
-              -d "{\"content\": \"Build ${{ github.workflow }} #${{ github.run_number }} finished. Status: ${{ job.status }}. Branch: ${{ github.ref_name }}\"}" \
-              $DISCORD_WEBHOOK_URL
+  call-reusable-ci:
+    uses: ./.github/workflows/ci-reusable.yml
+    with:
+      node-version: 20
+      run-smoke-test: true
