--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "@sentry/node": "^10.40.0",
+    "dotenv": "^17.3.1",
     "express": "^4.17.1",
     "lodash": "^4.17.23",
     "moment": "^2.30.1",
