--- a/.github/workflows/ci-reusable.yml
+++ b/.github/workflows/ci-reusable.yml
@@ -50,7 +50,7 @@ jobs:
         run: docker run --rm todo-api npm audit # Check for known vulnerabilities
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@c94ce9fb468520275223c153574b00df6fe4bcc9 #v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
