--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "moment": "^2.30.1",
     "sql.js": "^1.6.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
