--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --write",
-    "format:check": "prettier . --check"
+    "format:check": "prettier . --check",
+    "openapi:lint": "spectral lint openapi.yaml",
+    "release": "standard-version"
   },
   "dependencies": {
+    "@growthbook/growthbook": "^1.6.5",
     "@sentry/node": "^10.40.0",
     "dotenv": "^17.3.1",
     "express": "^4.17.1",
     "lodash": "^4.17.23",
     "moment": "^2.30.1",
+    "pino": "^10.3.1",
     "sql.js": "^1.6.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -24,12 +28,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@stoplight/spectral-cli": "^6.15.0",
     "eslint": "^10.0.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.3.0",
     "jest": "^30.2.0",
     "prettier": "3.8.1",
+    "standard-version": "^9.5.0",
     "supertest": "^7.2.2"
   }
 }
